// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckBox > should apply custom class names 1`] = `
<div>
  <rk-checkbox
    aria-checked="unchecked"
    aria-disabled="false"
    class="custom-class"
    role="checkbox"
    tabindex="0"
  >
    <input
      hidden=""
      name="test"
      type="checkbox"
    />
     
    <icon
      class="checkbox-unchecked"
    />
  </rk-checkbox>
  
</div>
`;

exports[`CheckBox > should render checkbox 1`] = `
<div>
  <rk-checkbox
    aria-checked="unchecked"
    aria-disabled="false"
    class=""
    role="checkbox"
    tabindex="0"
  >
    <input
      hidden=""
      name="test"
      type="checkbox"
    />
     
    <icon
      class="checkbox-unchecked"
    />
  </rk-checkbox>
  
</div>
`;
